#21 #22 fix cards on mobile view

--- a/css/cards.css
+++ b/css/cards.css
@@ -1,3 +1,13 @@
+nav{
+  background-image: url('../img/Bubble.png'); <!--need it for cards-->
+}
+body{
+  background-color: #031f4c;
+}
+
+.margintop05em {
+  margin-top: 0.5em;
+}
 
 header, main, footer {
   padding-left: 300px;
@@ -12,6 +22,9 @@ body nav li a{
   height: auto !important
 }
 
+.color-gray {
+  color: #9e9e9e ;
+}
 .card{
   border:solid red 1px;
 }
@@ -50,6 +63,7 @@ body nav li a{
 .question{
   border:solid black 1px;
   margin: 1.5em auto;
+  background-color: white;
   width:80%;
 }
 .question > h2{
@@ -57,10 +71,15 @@ body nav li a{
   padding:0.25em;
 }
 
-@media only screen and (max-width : 420px) {
+@media only screen and (min-width : 420px) {
   .try{
     display:block;
     border:solid orange 3px;
+  }
+  .card-image-duo{
+    display: inline-block;
+    float: left;
+    max-width: 50%;
   }
 }
 
